[package]
name = "ugd_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ciborium = "0.2.1"
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
serde.workspace = true
serde_json = "1.0"
ic-stable-structures = "0.6.0"
ic-response-verification = "2.3.0"
ic-representation-independent-hash = "2.3.0"
shared = { path = "../shared" }
serde_bytes = "0.11.12"
serde_cbor.workspace = true
regex = "1.9.3"
ic-certification = "2.3.0"
sha2 = "0.10.7"
base64 = "0.13.1"
globset = "0.4.13"
hex = "0.4.3"
url = "2.4.0"
urlencoding = "2.1.3"